(library
 (name token)
 (modules token)
 (libraries sexplib)
 (preprocess
  (pps ppx_compare ppx_sexp_conv)))

(library
 (name lexer)
 (modules lexer)
 (libraries token))

(library
 (name lexer_test)
 (modules lexer_test)
 (libraries lexer sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))
