(library
 (name token)
 (modules token)
 (libraries sexplib)
 (preprocess
  (pps ppx_compare ppx_sexp_conv)))

(library
 (name lexer)
 (modules lexer)
 (libraries token))

(library
 (name lexer_test)
 (modules lexer_test)
 (libraries lexer sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name ast)
 (modules ast)
 (libraries sexplib token)
 (preprocess
  (pps ppx_compare ppx_sexp_conv)))

(library
 (name parser)
 (modules parser)
 (libraries ast lexer token)
 (preprocess
  (pps ppx_deriving.ord)))

(library
 (name parser_test)
 (modules parser_test)
 (libraries parser sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name object)
 (modules object)
 (libraries ast sexplib)
 (preprocess
  (pps ppx_compare ppx_deriving.ord ppx_sexp_conv)))

(library
 (name evaluator)
 (modules evaluator)
 (libraries ast object token))

(library
 (name evaluator_test)
 (modules evaluator_test)
 (libraries evaluator lexer parser sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))
