(library
 (name token)
 (modules token)
 (libraries sexplib)
 (preprocess
  (pps ppx_compare ppx_sexp_conv)))

(library
 (name lexer)
 (modules lexer)
 (libraries token))

(library
 (name lexer_test)
 (modules lexer_test)
 (libraries lexer sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name ast)
 (modules ast)
 (libraries sexplib token)
 (preprocess
  (pps ppx_compare ppx_sexp_conv)))

(library
 (name parser)
 (modules parser)
 (libraries ast lexer token)
 (preprocess
  (pps ppx_deriving.ord)))

(library
 (name parser_test)
 (modules parser_test)
 (libraries parser sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name object)
 (modules object)
 (libraries ast sexplib)
 (preprocess
  (pps ppx_compare ppx_deriving.ord ppx_sexp_conv)))

(library
 (name evaluator)
 (modules evaluator)
 (libraries ast object token))

(library
 (name evaluator_test)
 (modules evaluator_test)
 (libraries evaluator lexer parser sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name code)
 (modules code)
 (libraries base bytes sexplib)
 (preprocess
  (pps ppx_compare ppx_deriving.enum ppx_deriving.show ppx_sexp_conv)))

(library
 (name code_test)
 (modules code_test)
 (libraries base code sexplib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name compiler)
 (modules compiler)
 (libraries ast code object sexplib)
 (preprocess
  (pps ppx_compare ppx_sexp_conv)))

(library
 (name compiler_test)
 (modules compiler_test)
 (libraries ast base code compiler sexplib token)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name vm)
 (modules vm)
 (libraries code compiler object)
 (preprocess
  (pps ppx_compare ppx_sexp_conv)))

(library
 (name vm_test)
 (modules vm_test)
 (libraries base code compiler object sexplib token vm)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_assert)))
